srv/mosquitto/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto-mqtt
  namespace: producao
spec:
  externalIPs:
    - "191.36.8.9"
    - "191.36.8.21"
    - "191.36.8.22"
    - "191.36.8.23"
#    - "191.36.8.24"
    - "191.36.8.25"
    - "191.36.8.26"
    - "191.36.8.27"
  ports:
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
  selector:
    app: mosquitto
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto-ws
  namespace: producao
spec:
  ports:
    - name: mqtt-ws
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: mosquitto
