srv/mosquitto/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto
  namespace: producao
spec:
  rules:
    - host: mqtt.sj.ifsc.edu.br
      http:
        paths:
          - backend:
              serviceName: mosquitto-ws
              servicePort: 9001
            path: /
  tls:
    - hosts:
        - mqtt.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
